workong on dependencies

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,3 +2,13 @@
 name="aspiesolutions"
 version="0.1.0"
 edition="2021"
+
+[features]
+default=[]
+[dependencies.rocket]
+version ="0.5"
+optional="true"
+[dependencies.sea-query]
+version="0"
+features=["backend-postgresql"]
+optional=true
