--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,11 +4,22 @@ version="0.1.0"
 edition="2021"
 
 [features]
-default=[]
+db=["sea-query","tokio-postgres"]
+default=["rocket","rocket_dyn_templates","db","tokio"]
+
+[dependencies]
+anyhow = "1.0.79"
+rocket_dyn_templates = { version = "0.1.0", features = ["tera"] ,optional = true}
 [dependencies.rocket]
 version ="0.5"
-optional="true"
+optional=true
 [dependencies.sea-query]
 version="0"
-features=["backend-postgresql"]
+features=["backend-postgres"]
 optional=true
+[dependencies.tokio-postgres]
+version = "0.7"
+optional = true
+[dependencies.tokio]
+version="1"
+optional = true
